--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,12 +1,6 @@
 .text_field
   = form.label :email
   = form.text_field :email
-.text_field
-  = form.label :username
-  = form.text_field :username
-.text_field
-  = form.label :zip_code
-  = form.text_field :zip_code
 .password_field
   = form.label :password
   = form.password_field :password
@@ -14,3 +8,13 @@
   = form.label :password_confirmation, 'Confirm password'
   = form.password_field :password_confirmation
 
+
+.text_field
+  = form.label :username
+  = form.text_field :username
+.text_field
+  = form.label :zip_code
+  = form.text_field :zip_code
+  
+- if ENV['INVITE']
+  FOO
