--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -1,6 +1,10 @@
 body
+  :background-color #EEE
   :margin 0
   :padding 0
+.container
+  :background-color #FFF
+  :min-height 500px
 .header
   :text-align right
   :padding 25px 50px
