--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -1,6 +1,11 @@
 body {
+  background-color: #EEE;
   margin: 0;
   padding: 0; }
+
+.container {
+  background-color: #FFF;
+  min-height: 500px; }
 
 .header {
   text-align: right;
