--- a/app/views/listings/show.html.haml
+++ b/app/views/listings/show.html.haml
@@ -5,11 +5,50 @@
   .seller= link_to @listing.user.username, @listing.user
 
   .tab
-    %h3 Make an offer
+    %h3= t(:make_an_offer)
+    - form_for([@listing, @offer]) do |form|
+      .text_field
+        = form.label :amount, t(:offer_amount)
+        = form.text_field :amount
+      .radio_button
+        %fieldset
+          %legend= t(:pickup_availability)
+          = form.label :pickup_availability_weekday_am, t(:weekday).capitalize + ' ' + t(:am)
+          = form.radio_button :pickup_availability, 'weekday am'
+          = form.label :pickup_availability_weekday_pm, t(:weekday).capitalize + ' ' + t(:pm)
+          = form.radio_button :pickup_availability, 'weekday pm'
+          = form.label :pickup_availability_weekend_am, t(:weekend).capitalize + ' ' + t(:am)
+          = form.radio_button :pickup_availability, 'weekend am'
+          = form.label :pickup_availability_weekend_pm, t(:weekend).capitalize + ' ' + t(:pm)
+          = form.radio_button :pickup_availability, 'weekend pm'
+      .text_area
+        = form.label :message, t(:message)
+        = form.text_area :message
+      .submit
+        = form.submit t(:submit)
   .tab
-    %h3 Ask a question
+    %h3= t(:ask_a_question)
+    - form_for([@listing, @question]) do |form|
+      .text_field
+        = form.label :message, t(:message)
+        = form.text_area :message
+      .submit
+        = form.submit t(:submit)
   .tab
-    %h3 Report Abuse
-
+    %h3= t(:report_abuse)
+    - form_for([@listing, @report]) do |form|
+      .radio_button
+        = form.label :reason_duplicate, 'Duplicate Listing'
+        = form.radio_button :reason, 'duplicate'
+        = form.label :reason_misleading, 'Misleading Title or Description'
+        = form.radio_button :reason, 'misleading'
+        = form.label :reason_not_actual_item, 'Photo used is not the actual item (This is okay for new items)'
+        = form.radio_button :reason, 'not actual item'
+        = form.label :reason_miscategorized, 'Item is miscategorized'
+        = form.radio_button :reason, 'miscategorized'
+        = form.label :reason_offensive, 'Inappropriate or offensive content'
+        = form.radio_button :reason, 'offensive'
+      .submit
+        = form.submit t(:submit)
   .description= @listing.description
 
