--- a/app/views/listings/show.html.haml
+++ b/app/views/listings/show.html.haml
@@ -1,4 +1,7 @@
 %div[@listing]
+  .photos
+    - @listing.photos.each do |photo|
+      = image_tag photo.file(:display)
   .title= @listing.title
   .price= @listing.price
 
