--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -2,6 +2,7 @@ body
   :background-color #EEE
   :margin 0
   :padding 0
+  :font-family "Helvetica Neue", Helvetica, Arial, sans-serif
 .container
   :background-color #FFF
   :min-height 500px
