--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -1,7 +1,8 @@
 body {
   background-color: #EEE;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
 .container {
   background-color: #FFF;
