--- a/app/views/shared/_search.html.haml
+++ b/app/views/shared/_search.html.haml
@@ -2,4 +2,4 @@
   = text_field_tag :q
   = text_field_tag :zip_code, nil, :title => 'zip code'
   = submit_tag t(:search)
-  = link_to t(:browse), '#'
+  = link_to t(:browse), listings_path
