--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -13,9 +13,13 @@
           %li= link_to 'two', '#'
           %li= link_to 'three', '#'
     #search_details
+      = check_box_tag :title_only
       Search title only
+      = check_box_tag :include_complete
       Include Completed
+      = check_box_tag :has_image
       Has image
-      Min
-      Max
+      = text_field_tag :min, nil, :title => 'Min'
+      = text_field_tag :min, nil, :title => 'Max'
       Search Radius
+      .slider
