--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %title Splunkr
-    = javascript_include_tag 'jquery', 'jquery.hint.js', 'application'
+    = javascript_include_tag 'jquery', 'jquery.hint.js', 'jquery-ui', 'application'
     = stylesheet_link_tag 'screen'
     = yield :head
   %body{:class => controller.controller_name}
