--- a/app/views/dashboards/_feedback.html.haml
+++ b/app/views/dashboards/_feedback.html.haml
@@ -1,1 +1,12 @@
-Feedback
+.dashboard_top
+  = link_to 'Feedback Left', :filter => 'left'
+  = link_to 'Feedback Received', :filter => 'received'
+  = image_tag('rating.png', :alt => 'Rating')
+  = "#{current_user.rating}% (#{current_user.ratings_count})"
+%table
+  %thead
+    %tr
+      %th Date &bull;
+      %th Item &bull;
+      %th User &bull;
+      %th Rating &bull
