--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -366,4 +366,8 @@ span.user
   :border-bottom 1px solid #999999
 .image_button
   :vertical-align middle
+.slider
+  :font-size 60%
+  :width 200px
+  :height 20px
 @import dashboard.sass
