--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
   %head
     %title Splunkr
     = javascript_include_tag 'jquery', 'jquery.hint.js', 'jquery-ui', 'application'
-    = stylesheet_link_tag 'screen'
+    = stylesheet_link_tag 'screen', 'smoothness/screen'
     = yield :head
   %body{:class => controller.controller_name}
     .container
