--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -197,6 +197,11 @@ label
   :padding 5px 10px
   :border 1px solid #CCC
   :border-top 0
+  :font-size 11px
+  :position absolute
+  :float left
+  label
+    :display inline
   
 .form_left
   :width 600px
@@ -366,8 +371,26 @@ span.user
   :border-bottom 1px solid #999999
 .image_button
   :vertical-align middle
-.slider
-  :font-size 60%
-  :width 200px
-  :height 20px
+#slider
+  :font-size 60% 
+#slider_amount
+  :border 0
+  :background transparent
+  :color #1F98E5
+  :display inline
+  :width 70px
+.search_details_left
+  :width 150px
+  :float left
+  :border-right 1px solid #CCC
+.search_details_right
+  :margin-left 10px
+  :float left
+  :width 150px
+.search_price
+  :width 50px
+  :margin-bottom 10px
+  :border 1px solid #BBBBBB
+#search_radius
+  :float left
 @import dashboard.sass
