--- a/app/views/users/_bar.html.haml
+++ b/app/views/users/_bar.html.haml
@@ -1,4 +1,6 @@
 - if current_page?(sign_up_path)
+  .logo_top
+    = link_to 'Splunkr.', root_path
   .logged_out
     Already a member? 
     .login
@@ -12,6 +14,9 @@
           = form.label :remember_me
           = link_to 'forgot password', new_password_path
 - elsif signed_out? 
+  - unless current_page?(root_path)
+    .logo_top
+      = link_to 'Splunkr.', root_path
   .logged_out
     .login
       = link_to t(:login).capitalize, sign_in_path, :id => 'login_link'
