--- a/app/views/shared/_search.html.haml
+++ b/app/views/shared/_search.html.haml
@@ -6,6 +6,5 @@
     = link_to t(:browse).capitalize, '#', :class => 'right_arrow', :id => 'browse'
     #categories
       %ul
-        %li= link_to 'one', '#'
-        %li= link_to 'two', '#'
-        %li= link_to 'three', '#'
+        - Category.all.each do |category|
+          %li= link_to category.title, '#'
