--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -118,6 +118,8 @@ label
     :height 500px
     :border-left 1px solid #EEE
     :padding-left 20px
+    :text-align left
+    :font-size 11px
     ul
       :list-style-type none
       :margin 0
@@ -341,13 +343,16 @@ table
   th
     :font-size 14px
     :padding 5px 0 5px 20px
+    a
+      :color #999999
+      :font-weight bold
+      &.active
+        :color #333
   th.hidden
     span
       :display none
-.listing_table
-  a
-    :color #333333
-    :font-weight bold
+
+    
 span.user
   :font-size 12px
   .details
