--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -335,7 +335,7 @@ table
   :border-spacing 0
 
   thead
-    :background-color #F6F6F6
+    :background-color #F5F5F5
     :color #999999
     :text-align left
   th, td
@@ -412,4 +412,9 @@ span.user
 #search_radius
   :float left
   :margin-left 20px
+  :margin-right 20px
+tr.selected
+  :background-color #F6F6F6
+td.fixed, th.fixed
+  :width 60px
 @import dashboard.sass
