--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -18,7 +18,7 @@
           = check_box_tag :title_only
           Search title only
         .check_box
-          = check_box_tag :include_complete
+          = check_box_tag :include_completed
           Include Completed
         .check_box
           = check_box_tag :has_image
@@ -26,7 +26,7 @@
       .search_details_right
         .search_prices
           = text_field_tag :min, nil, :title => 'Min', :class => 'search_price'
-          = text_field_tag :min, nil, :title => 'Max', :class => 'search_price'
+          = text_field_tag :max, nil, :title => 'Max', :class => 'search_price'
         Search Radius: 
         = text_field_tag :radius, nil, :id => 'slider_amount', :readonly => 'readonly'
         #slider
