--- a/app/views/users/_bar.html.haml
+++ b/app/views/users/_bar.html.haml
@@ -1,6 +1,7 @@
 - if current_page?(sign_up_path)
   .logo_top
     = link_to 'Splunkr.', root_path
+    = render 'shared/search'
   .logged_out
     Already a member? 
     .login
@@ -17,6 +18,7 @@
   - unless current_page?(root_path)
     .logo_top
       = link_to 'Splunkr.', root_path
+    = render 'shared/search'
   .logged_out
     .login
       = link_to t(:login).capitalize, sign_in_path, :id => 'login_link'
