--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -19,6 +19,8 @@ a
   img
     :border 0
 .container
+  :float left
+  :width 100%
   :background-color #FFF
   :min-height 500px
 .header
@@ -66,6 +68,7 @@ a
           :width 180px
           :margin-bottom 10px
 .footer
+  :clear both
   :background-color #EEE
   :border-top 2px solid #CCC
   :padding 25px 20px
@@ -418,3 +421,4 @@ tr.selected
 td.fixed, th.fixed
   :width 60px
 @import dashboard.sass
+@import listing.sass
