--- a/app/views/listings/new.html.haml
+++ b/app/views/listings/new.html.haml
@@ -2,6 +2,7 @@
   = javascript_include_tag 'swfupload/swfupload', 'swfupload/swfupload.swfobject', 'swfupload/handlers'
   - session_key_name = ActionController::Base.session_options[:key]
   :javascript
+    var swf_upload;
     SWFUpload.onload = function() {
       var swf_settings = {
  
@@ -46,11 +47,11 @@
           upload_target: "divFileProgressContainer"
         }
       }
-      var swf_upload = new SWFUpload(swf_settings);
+      //swf_upload = new SWFUpload(swf_settings);
     };
     
 Complete all fields and click the <strong>Submit</strong> button to post your listing.
-- form_for(@listing, :html => {:multipart => true}) do |form|
+- form_for(@listing, :html => {:multipart => true, :class => 'swf_upload'}) do |form|
   = form.error_messages
   .form_left
     .text_field
@@ -89,6 +90,9 @@ Complete all fields and click the <strong>Submit</strong> button to post your li
     %label Images
     .attachment_container
     #images
+      - form.fields_for(:photos) do |photos_form|
+        = photos_form.file_field :file
+      
     %span#spanButtonPlaceholder.attachment_button
     
   
