--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -1,9 +1,13 @@
 body
   :background-color #EEE
   :font-family "Helvetica Neue", Helvetica, Arial, sans-serif
-body, p, div
+body, p, div, h4
   :margin 0
   :padding 0
+h4
+  :color #003366
+  :font-size 10px
+  :font-weight bold
 .content
   :margin-left 20px
 body.searches .content
@@ -343,6 +347,9 @@ table
     :text-align left
   th, td
     :padding-left 20px
+    :vertical-align top
+  td
+    :padding 10px 20px
   th
     :font-size 14px
     :padding 5px 0 5px 20px
@@ -354,6 +361,15 @@ table
   th.hidden
     span
       :display none
+  &.inner
+    :font-size 11px
+    th, td
+      :padding 0
+    textarea
+      :width 360px
+      :height 60px
+    .answered, .reply
+      :color #999999
 
     
 span.user
