--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -2,9 +2,14 @@ body {
   background-color: #EEE;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
-body, p, div {
+body, p, div, h4 {
   margin: 0;
   padding: 0; }
+
+h4 {
+  color: #003366;
+  font-size: 10px;
+  font-weight: bold; }
 
 .content {
   margin-left: 20px; }
@@ -363,7 +368,10 @@ table {
     color: #999999;
     text-align: left; }
   table th, table td {
-    padding-left: 20px; }
+    padding-left: 20px;
+    vertical-align: top; }
+  table td {
+    padding: 10px 20px; }
   table th {
     font-size: 14px;
     padding: 5px 0 5px 20px; }
@@ -374,6 +382,15 @@ table {
         color: #333; }
   table th.hidden span {
     display: none; }
+  table.inner {
+    font-size: 11px; }
+    table.inner th, table.inner td {
+      padding: 0; }
+    table.inner textarea {
+      width: 360px;
+      height: 60px; }
+    table.inner .answered, table.inner .reply {
+      color: #999999; }
 
 span.user {
   font-size: 12px; }
@@ -509,3 +526,10 @@ a.active_tab_heading {
   .listing .listing_details {
     margin-left: 35px;
     float: left; }
+
+.listing_back {
+  border-bottom: 1px solid #999999;
+  margin-left: -20px;
+  padding-left: 20px;
+  padding-bottom: 5px;
+  margin-bottom: 25px; }
