--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -43,7 +43,9 @@ a
         :border-bottom 0
         :color #000
   .login
-    :display inline
+    :display block
+    :float right
+    :margin-left 5px
     :position relative
     :z-index 1
     .login_form
@@ -53,8 +55,8 @@ a
         :margin-left 20px
       :z-index -1
       :text-align left
-      :right 5px
-      :top 0
+      :right 0px
+      :margin-top 3px
       :background-color #F4F4F4
       :border 1px solid #999999
       :width 200px
@@ -158,6 +160,7 @@ label
     :display none
     :position absolute
     :left 100%
+    :font-size 11px
     :margin-left 5px
     :top -250px
     :height 500px
