--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -49,14 +49,16 @@ a {
       border-bottom: 0;
       color: #000; }
   .header .login {
-    display: inline;
+    display: block;
+    float: right;
+    margin-left: 5px;
     position: relative;
     z-index: 1; }
     .header .login .login_form {
       z-index: -1;
       text-align: left;
-      right: 5px;
-      top: 0;
+      right: 0px;
+      margin-top: 3px;
       background-color: #F4F4F4;
       border: 1px solid #999999;
       width: 200px;
@@ -169,6 +171,7 @@ label {
     display: none;
     position: absolute;
     left: 100%;
+    font-size: 11px;
     margin-left: 5px;
     top: -250px;
     height: 500px;
