--- a/public/stylesheets/sass/dashboard.sass
+++ b/public/stylesheets/sass/dashboard.sass
@@ -44,3 +44,7 @@ a.active_tab_heading
   :background-color #E5F3FC
   :color #333333
   :border-color #999999
+
+tr.sold
+  a, span.price
+    :color #999
