--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -45,3 +45,6 @@ a.active_tab_heading {
   background-color: #E5F3FC;
   color: #333333;
   border-color: #999999; }
+
+tr.sold a, tr.sold span.price {
+  color: #999; }
