--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -517,6 +517,9 @@ a.active_tab_heading {
   color: #333333;
   border-color: #999999; }
 
+tr.sold a, tr.sold span.price {
+  color: #999; }
+
 .listing {
   float: left;
   padding-bottom: 30px; }
