--- a/app/views/searches/show.html.haml
+++ b/app/views/searches/show.html.haml
@@ -28,35 +28,4 @@
       = text_field_tag :radius, nil, :id => 'slider_amount', :readonly => 'readonly'
       #slider
     = image_submit_tag 'submit_small.png', :alt => 'set', :class => 'image_button'
-%table.listing_table
-  %thead
-    %tr
-      %th.fixed= sort_link_to(:date, 'Date')
-      %th.fixed
-      %th= sort_link_to(:title, 'Item')
-      %th= sort_link_to(:price, 'Price')
-      %th= @city ? sort_link_to(:distance, 'Distance') : 'Location'
-      %th= sort_link_to(:rating, 'User Rating')
-      %th= image_tag('favorite_header.png', :alt => 'favorite')
-  %tbody
-    - @results.each do |listing|
-      - listing = listing.presenter
-      %tr
-        %td.fixed
-          = listing.date
-        %td.fixed
-          - if listing.new?
-            = image_tag('new.png', :alt => 'new')
-        %td
-          = link_to listing.title, listing
-        %td= listing.price
-        %td
-          = listing.location
-          - if @city
-            = display_distance(listing.city.distance_from(@city))
-        %td= image_tag('rating.png') + " #{listing.user.rating} (#{listing.user.ratings_count})"
-        %td 
-          - if @favorites.key?(listing.id)
-            = link_to(image_tag('favorite.png', :alt => 'Remove from favorites'), listing_favorite_path(listing, @favorites[listing.id]), :method => :delete)
-          - else 
-            = link_to(image_tag('not_favorite.png', :alt => 'Add to Favorites'), listing_favorites_path(listing), :method => :post)
+= render :partial => 'listings/results', :locals => {:city => @city, :results => @results, :favorites => @favorites}
