--- a/app/views/searches/_bar.html.haml
+++ b/app/views/searches/_bar.html.haml
@@ -1,4 +1,4 @@
-- form_tag(search_path, :id => 'search_small', :method => :get) do
+- form_tag((@category ? @category : search_path), :id => 'search_small', :method => :get) do
   .form
     = text_field_tag :q, h(params[:q]), :title => t(:example_search)
     = text_field_tag :zip_code, (params[:zip_code] || (signed_in? ? current_user.zip_code : nil)), :title => 'zip code'
@@ -7,5 +7,6 @@
       = link_to ((@category ? @category.title : t(:browse)).capitalize, '#', :class => 'right_arrow', :id => 'browse')
       #categories
         %ul
+          %li= link_to 'All', search_path
           - Category.all.each do |category|
             %li= link_to category.title, category
